--- a/components/default-theme.css
+++ b/components/default-theme.css
@@ -1,10 +1,8 @@
-html {
-  overflow-x: hidden;
-}
-
-body {
-  margin: 0;
-  min-height: 100svh;
+:host {
+  --color-background: #eef3f6;
+  --color-accent: #005bff;
+  --easing: cubic-bezier(0.6, .5, .55, 1.05);
+  --micromodule: 10px;
 }
 
 .visually-hidden {
