--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,7 +9,7 @@
   max-width: 1920px;
   min-height: inherit;
   --base-row: var(--base-module);
-  --margins: minmax(0, var(--base-module));
+  --margins: minmax(0, 1fr);
   --expanded-row: calc(var(--base-module) + var(--micromodule));
   --layout: var(--margins) var(--expanded-row) var(--base-row) var(--expanded-row) var(--margins);
 }
